--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
-EditorStartupMap=/Engine/Maps/Templates/OpenWorld.OpenWorld
+GameDefaultMap=/Game/NewMap.NewMap
+EditorStartupMap=/Game/NewMap.NewMap
 GlobalDefaultGameMode=/ArchVizExplorer/Blueprints/BP_GameMode.BP_GameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
